<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/outputView"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMR"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="122dp"
        android:layout_weight="1"
        android:text="@string/buttonMR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="122dp" />

    <Button
        android:id="@+id/buttonMC"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="329dp"
        android:layout_marginBottom="559dp"
        android:layout_weight="1"
        android:text="@string/buttonMC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="122dp"/>

    <Button
        android:id="@+id/buttonMplius"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="122dp"
        android:layout_weight="1"
        android:text="@string/buttonMplus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="122dp" />

    <Button
        android:id="@+id/buttonMminus"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="122dp"
        android:layout_weight="1"
        android:text="@string/buttonMminus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="328dp"
        tools:layout_editor_absoluteY="122dp" />

    <Button
        android:id="@+id/buttonMS"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="122dp"
        android:layout_weight="1"
        android:text="@string/buttonMS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="122dp" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="392dp"
        android:layout_weight="1"
        android:text="@string/buttonPlus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="392dp" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="338dp"
        android:layout_weight="1"
        android:text="@string/buttonMinus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="338dp" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="230dp"
        android:layout_weight="1"
        android:text="@string/buttonDivide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="230dp" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="284dp"
        android:layout_weight="1"
        android:text="@string/buttonMultiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="284dp" />

    <Button
        android:id="@+id/buttonSquare"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="176dp"
        android:layout_weight="1"
        android:text="@string/buttonSquare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="328dp"
        tools:layout_editor_absoluteY="176dp" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="76dp"
        android:layout_height="104dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="338dp"
        android:layout_weight="1"
        android:text="@string/buttonEqual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="328dp"
        tools:layout_editor_absoluteY="338dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="338dp"
        android:layout_weight="1"
        android:text="@string/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="338dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="338dp"
        android:layout_weight="1"
        android:text="@string/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="338dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="338dp"
        android:layout_weight="1"
        android:text="@string/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="338dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="284dp"
        android:layout_weight="1"
        android:text="@string/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="284dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="284dp"
        android:layout_weight="1"
        android:text="@string/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="284dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="284dp"
        android:layout_weight="1"
        android:text="@string/button6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="284dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="230dp"
        android:layout_weight="1"
        android:text="@string/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="230dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="230dp"
        android:layout_weight="1"
        android:text="@string/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="230dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="230dp"
        android:layout_weight="1"
        android:text="@string/button9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="230dp" />

    <Button
        android:id="@+id/button0"
        android:layout_width="156dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="392dp"
        android:layout_weight="1"
        android:text="@string/button0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="392dp" />

    <Button
        android:id="@+id/buttonLeft"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="176dp"
        android:layout_weight="1"
        android:text="@string/buttonLeft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="176dp" />

    <Button
        android:id="@+id/buttonCE"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="176dp"
        android:layout_weight="1"
        android:text="@string/buttonCE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="176dp" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="176dp"
        android:layout_weight="1"
        android:text="@string/buttonC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="176dp" />

    <Button
        android:id="@+id/buttonPlusMinus"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="176dp"
        android:layout_weight="1"
        android:text="@string/buttonPlusMinus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="176dp" />

    <Button
        android:id="@+id/buttonProc"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="230dp"
        android:layout_weight="1"
        android:text="@string/buttonProc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="328dp"
        tools:layout_editor_absoluteY="230dp" />

    <Button
        android:id="@+id/button1x"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="284dp"
        android:layout_weight="1"
        android:text="@string/button1x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="328dp"
        tools:layout_editor_absoluteY="284dp" />

    <Button
        android:id="@+id/buttonSpot"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="392dp"
        android:layout_weight="1"
        android:text="@string/buttonSpot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="392dp" />

</androidx.constraintlayout.widget.ConstraintLayout>